--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "electron": "^6.0.10"
   },
   "dependencies": {
-    "chokidar": "^3.1.1"
+    "chokidar": "^3.1.1",
+    "cron": "^1.7.2",
+    "dotenv": "^8.1.0",
+    "jquery": "^3.4.1"
   }
 }
