--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
   "author": "Dainis Abols (aaxc)",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^6.0.10"
+    "electron": "^6.0.10",
+    "electron-builder": "^21.2.0"
   },
   "dependencies": {
     "chokidar": "^3.1.1",
     "cron": "^1.7.2",
+    "custom-electron-titlebar": "^3.1.0",
     "dotenv": "^8.1.0",
     "jquery": "^3.4.1"
+  },
+  "win": {
+    "target": "NSIS"
   }
 }
