--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eso_armory_file_uploader",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Create your own character armory and let others see your fame!",
   "main": "main.js",
   "productName": "ESO Armory File uploader",
@@ -9,8 +9,10 @@
   "scripts": {
     "start": "electron .",
     "package": "electron-packager . eso-afu --overwrite --asar=true --platform=win32 --arch=x64 --out=release-builds --icon=images/icon256x256.ico --prune=true--win32metadata.FileDescription=\"Lightweight online armory for Elder Scrolls Online characters\" --win32metadata.CompanyName=\"ESO Armory\" --win32metadata.ProductName=\"ESO Armory File uploader\" --app-copyright=\"2019 (c) ESO Armory\"",
-    "build": "electron-builder  build --win --x64 --publish never ",
-    "deploy": "electron-builder build --win --x64 --publish always"
+    "build": "electron-builder  build --win --mac --x64 --publish never ",
+    "build-win": "electron-builder  build --win --x64 --publish never ",
+    "build-mac": "electron-builder  build --mac --publish never ",
+    "deploy": "electron-builder build --win --linux --x64 --publish always"
   },
   "repository": {
     "type": "git",
@@ -36,7 +38,8 @@
     "custom-electron-titlebar": "^3.1.0",
     "electron-updater": "^4.2.0",
     "form-data": "^2.5.1",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "rpm": "0.0.0"
   },
   "win": {
     "target": "NSIS"
