--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "chokidar": "^3.3.0",
-    "electron": "^7.1.2",
+    "electron": "^7.1.3",
     "electron-builder": "^21.2.0",
     "electron-squirrel-startup": "^1.0.0"
   },
@@ -39,7 +39,8 @@
     "electron-updater": "^4.2.0",
     "form-data": "^3.0.0",
     "jquery": "^3.4.1",
-    "rpm": "0.0.0"
+    "rpm": "0.0.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "win": {
     "target": "NSIS"
