Rewerted package versions

--- a/package.json
+++ b/package.json
@@ -27,20 +27,19 @@
   "author": "ESO Armory",
   "license": "CC0-1.0",
   "devDependencies": {
-    "chokidar": "^3.3.0",
-    "electron": "^7.1.4",
+    "electron": "^6.1.4",
     "electron-builder": "^21.2.0",
     "electron-squirrel-startup": "^1.0.0"
   },
   "dependencies": {
     "auto-launch": "^5.0.5",
+    "chokidar": "^3.3.0",
     "cron": "^1.7.2",
     "custom-electron-titlebar": "^3.1.0",
+    "dotenv": "^8.2.0",
     "electron-updater": "^4.2.0",
-    "form-data": "^3.0.0",
-    "jquery": "^3.4.1",
-    "rpm": "0.0.0",
-    "xmlhttprequest": "^1.8.0"
+    "form-data": "^2.5.1",
+    "jquery": "^3.4.1"
   },
   "win": {
     "target": "NSIS"
